--- a/src/panhandler/templates/panhandler/report.html
+++ b/src/panhandler/templates/panhandler/report.html
@@ -12,9 +12,17 @@
             i.attr('src', url);
             m.modal('toggle');
         }
+        function printable(){
+            var wnd = window.open("about:blank", "_blank");
+            var html = document.getElementById('reportHtml').innerHTML;
+            wnd.document.body.innerHTML = atob(html);
+        }
+        function save(){
+        }
     </script>
 {% endblock %}
 {% block content %}
+    <div style="display:none" id="reportHtml">{{ report }}</div>
     <div style="position:fixed;top:60;left:5;right:5;height:50px;">
         {% if request.session.next_step %}
             {% if request.session.last_step %}
@@ -25,7 +33,8 @@
         {% else %}
             <a href="{{ request.session.last_page|urlencode }}" class="btn btn-primary">Continue</a>
         {% endif %}
-        <a href="{{ request.session.last_page|urlencode }}" class="btn btn-primary">Print / Save</a>
+        <a onclick='printable();' class="btn btn-primary" href="#">Print</a>
+        <a onclick='save();' class="btn btn-primary" href="#">Save</a>
     </div>
     <div style="position:fixed;top:102;bottom:0;left:0;right:0;">
         <iframe src="data:text/html;base64,{{ report }}" style="border:none;width:100%;height:100%;">
