--- a/src/panhandler/templates/panhandler/report.html
+++ b/src/panhandler/templates/panhandler/report.html
@@ -16,7 +16,7 @@
 {% endblock %}
 {% block content %}
     <div style="display:none" id="reportHtml">{{ report }}</div>
-    <div style="position:fixed;top:60;left:5;right:5;height:50px;">
+    <div style="position:fixed;top:55;left:0;right:0;height:50px;padding:5px;background:#32393f;">
         {% if request.session.next_step %}
             {% if request.session.last_step %}
                 <a href="/workflow/{{ request.session.next_step }}" class="btn btn-primary">Complete</a>
@@ -29,7 +29,7 @@
         <a target="_blank" class="btn btn-primary" href="/panhandler/report">Print</a>
         <a  class="btn btn-primary" href="/panhandler/report" download>Save</a>
     </div>
-    <div style="position:fixed;top:102;bottom:0;left:0;right:0;">
+    <div style="position:fixed;top:105;bottom:0;left:0;right:0;">
         <iframe src="data:text/html;base64,{{ report }}" style="border:none;width:100%;height:100%;">
         </iframe>
     </div>
