--- a/src/panhandler/templates/panhandler/welcome.html
+++ b/src/panhandler/templates/panhandler/welcome.html
@@ -17,6 +17,10 @@
             <a href="https://live.paloaltonetworks.com/t5/Skillets/ct-p/Skillets">here</a>.
         </p>
         <p class="lead">
+            To learn more about building Configuration and Validation Skillets, see the
+            <a href="https://skilletbuilder.readthedocs.io/en/latest/">Skillet Builder Documentation</a>.
+        </p>
+        <p class="lead">
             {% if documentation_link %}
                 <a class="btn btn-primary btn-lg mr-2" href="{{ documentation_link }}" role="button">Learn more</a>
             {% endif %}
