--- a/src/panhandler/templates/panhandler/repos.html
+++ b/src/panhandler/templates/panhandler/repos.html
@@ -43,7 +43,7 @@
                         <p class="card-text">Last Updated: {{ repo.last_updated }}</p>
                     </div>
                     <div class="card-footer text-right">
-                        <a href="/panhandler/repo_detail/{{ repo.name }}" class="btn btn-primary">Detail</a>
+                        <a href="/panhandler/repo_detail/{{ repo.name }}" class="btn btn-primary">Details</a>
                     </div>
                 </div>
             </div>
