slight tweak to ansible diff outpput

--- a/src/panhandler/snippets/app/config_diff_ansible_output/output.skillet.yaml.j2
+++ b/src/panhandler/snippets/app/config_diff_ansible_output/output.skillet.yaml.j2
@@ -29,6 +29,6 @@
       xpath: |
         {{ snippet.xpath }}
       element: |
-        {{ snippet.element | e }}
+        {{ snippet.element | minimal_indent(8) | e }}
 
 {%- endfor %}
